--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,12 @@ body{
 footer{
     background-color: rgb(236, 153, 29);
 }
+h1{
+    text-align: center;
+    text-transform: uppercase;
+   
+}
+
+p{
+    font-size: 24px;
+}
